# VRGA-Object-Loader

./: .gitignore  CMakeLists.txt  README.md  loader.cpp  loader.h  main.cc  model.cpp  model.h  util.cc  util.h
CMake/: FindSDL2.cmake
app/: main.cc
include/: Input.h  camera.h  light.h  lightsettings.h  model.h  scene.h  shader.h  shadermanager.h
res/shaders/: phong.frag  phong.vert  pointlight.frag  simple.frag  simplefragmentlight.frag  simplefragmentlight.vert  simplelight.frag  simplelight.vert  simplespotlight.frag  simplespotlight.vert  simplevertexlight.vert  spotlight.frag  spotlight.vert  toon.frag  toon.vert
src/: camera.cpp  light.cpp  model.cpp  scene.cpp  shader.cpp  shadermanager.cpp
